<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_label">Messaging</string>
    <string name="new_message">New message</string>
    <string name="cdma_cell_broadcast_sms">Cell Broadcast SMS</string>
    <string name="cell_broadcast_sms">Cell Broadcast SMS</string>
    <string name="enable_disable_cell_bc_sms">Cell Broadcast SMS</string>
    <string name="cell_bc_sms_enable">Cell Broadcast SMS enabled</string>
    <string name="cell_bc_sms_disable">Cell Broadcast SMS disabled</string>
    <string name="cb_sms_settings">Cell Broadcast SMS settings</string>
    <string name="channel_name">Channel Name</string>
    <string name="channel_number">Channel Number</string>
    <string name="no_cell_broadcast">No cell broadcast message</string>
    <string name="broadcast">Cell Broadcast SMS</string>
    <string name="menu_cellbroadcastsms">Cell Broadcast</string>
    <string name="list_language_title">Language Setting</string>
    <string name="list_language_summary">Select the news language</string>
    <string name="broadcast_message">Message</string>
    <string name="language_eng">English</string>
    <string name="language_fren">French</string>
    <string name="language_spanish">Spanish</string>
    <string name="language_japanese">Japanese</string>
    <string name="language_korean">Korean</string>
    <string name="language_chinese">Chinese</string>
    <string name="language_hebrew">Hebrew</string>
    <string name="language_type">language</string>
    <string-array name="list_language_entries">
        <item>English</item>
        <item>French</item>
        <item>Spanish</item>
        <item>Japanese</item>
        <item>Korean</item>
        <item>Chinese</item>
        <item>Hebrew</item>
    </string-array>
    <string-array name="list_language_values">
        <item>"1"</item>
        <item>"2"</item>
        <item>"3"</item>
        <item>"4"</item>
        <item>"5"</item>
        <item>"6"</item>
        <item>"7"</item>
    </string-array>
    <string name="list_language_dtitle">Languages</string>
    <string name="create_new_message">Compose new message</string>
    <string name="menu_call_back">Call <xliff:g id="name">%s</xliff:g></string>
    <string name="menu_videocall_back">Video Call <xliff:g id="name">%s</xliff:g></string>
    <string name="menu_send_email">Send email to <xliff:g id="name">%s</xliff:g></string>
    <string name="menu_send_sms">Send message to <xliff:g id="name">%s</xliff:g></string>
    <string name="menu_compose_new">Compose</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_add_address_to_contacts">Add <xliff:g id="name">%s</xliff:g> to Contacts</string>
    <string name="menu_call">Call</string>
    <string name="menu_videocall">Video Call</string>
    <string name="menu_delete_all">Delete threads</string>
    <string name="menu_delete">Delete thread</string>
    <string name="menu_undelivered_messages">Undelivered messages</string>
    <string name="menu_view">View thread</string>
    <string name="refreshing">Refreshing\u2026</string>
    <string name="has_draft">Draft</string>
    <string name="re_select_media">The format is not correct,please select again.</string>
    <string name="broadcast_from_to"><xliff:g id="sender" example="me">%1$s</xliff:g> to <xliff:g id="recipient" example="Megan">%2$s</xliff:g></string>
    <string name="anonymous_recipient">Anonymous</string>
    <string name="no_subject_view">(No subject)</string>
    <string name="messagelist_sender_self">Me</string>
    <string name="view_picture">View picture</string>
    <string name="view_slideshow">View slideshow</string>
    <string name="view_message_details">View message details</string>
    <string name="view_delivery_report">View report</string>
    <string name="delete_message">Delete message</string>
    <string name="sent_on">"Sent: <xliff:g id="date">%s</xliff:g>"</string>
     <string name="receive_on">"Received: <xliff:g id="date">%s</xliff:g>"</string>
    <string name="expire_on">"Expires: <xliff:g id="date">%s</xliff:g>"</string>
    <string name="kilobyte">KB</string>
    <string name="undelivered_msg_dialog_title">Undelivered message</string>
    <string name="undelivered_msg_dialog_body">Unable to send this message.\nAttempt made: <xliff:g id="message">%s</xliff:g>.</string>
    <string name="undelivered_sms_dialog_body">Unable to send this message.</string>
    <string name="delete_thread">Delete thread</string>
    <string name="menu_forward">Forward</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <string name="name_colon"><b><xliff:g id="name" example="Me">%s</xliff:g></b>": "</string>
    <string name="inline_subject">"&lt;Subject: <xliff:g id="subject">%s</xliff:g>&gt;"</string>
    <string name="drm_protected_text">"* DRM protected text *"</string>
    <string name="insufficient_drm_rights">Insufficient DRM rights detected.</string>
    <string name="copy_message_text">Copy message text</string>
    <string name="message_options">Message options</string>
    <string name="move_message_to_sim_text">Copy to SIM</string>
    <string name="copy_message_result_success">Copy Success</string>
    <string name="copy_message_result_faile">Copy Fail</string>
    <string name="done">Done</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="remove_slide">Remove slide</string>
    <string name="add_slide_before" msgid="9140721399423564187">"Add slide, before"</string>
    <string name="add_slide">Add slide, after</string>
    <string name="add_slide_hint">Select to create new slide.</string>
    <string name="discard_slideshow">Discard slideshow</string>
    <string name="slide_show_part">Part <xliff:g id="part">%1$s</xliff:g>/<xliff:g id="total">%2$s</xliff:g></string>
    <string name="remove_text">Remove text</string>
    <string name="add_picture">Add picture</string>
    <string name="remove_picture">Remove picture</string>
    <string name="add_music">Add music</string>
    <string name="remove_music">Remove music</string>
    <string name="add_video">Add video</string>
    <string name="remove_video">Remove video</string>
    <string name="compose_title">Compose</string>
    <string name="to_hint">To</string>
    <string name="subject_hint">Subject</string>
    <string name="add_attachment">Attach</string>
    <string name="add_subject">Add subject</string>
    <string name="discard">Discard</string>
    <string name="view">View</string>
    <string name="replace">Replace</string>
    <string name="remove">Remove</string>
    <string name="send">Send</string>
    <string name="mms">MMS</string>
    <string name="all_threads">All threads</string>
    <string name="type_to_compose_text_enter_to_send">Type to compose</string>
    <string name="open_keyboard_to_compose_message">Open keyboard to compose message</string>
    <string name="image_too_large">Picture too large</string>
    <string name="ask_for_automatically_resize">Automatically resize picture before sending?</string>
    <string name="compressing">Picture too large. Compressing\u2026</string>
    <string name="unsupported_media_format">Unsupported <xliff:g id="name">%1$s</xliff:g> format</string>
    <string name="select_different_media">Please select a different <xliff:g id="name">%1$s</xliff:g>.</string>
    <string name="exceed_message_size_limitation">Message size limit reached.</string>
    <string name="exceed_text_length_limitation">Text length limit reached.</string>
    <string name="exceed_text_length_limitation_info">Text length limit reached,please re-input.</string>
    <string name="message_too_big_for_video">The message is too big to attach a video.</string>
    <string name="failed_to_add_media">Sorry, you cannot add this <xliff:g id="name">%1$s</xliff:g> to your message.</string>
    <string name="failed_to_resize_image">Picture not resized.</string>
    <string name="pref_notification_settings_title">Notification settings</string>
    <string name="pref_mms_settings_title">"Multimedia message (MMS) settings"</string>
    <string name="pref_sms_settings_title">"Text message (SMS) settings"</string>
    <string name="pref_sms_storage_title">Storage settings</string>
    <string name="pref_summary_manage_sim_messages">Manage messages stored on your SIM card</string>
    <string name="pref_summary_mms_delivery_reports">Request a delivery report for each message you send</string>
    <string name="pref_summary_mms_read_reports">Request a read report for each message you send</string>
    <string name="pref_summary_sms_delivery_reports">Request a delivery report for each message you send</string>
    <string name="pref_summary_auto_delete">Delete old messages as limits are reached</string>
     <string name="pref_summary_delete_limit_sms"><xliff:g id="count">%1$s</xliff:g> messages per conversation</string>
     <string name="pref_summary_delete_limit_mms"><xliff:g id="count">%1$s</xliff:g> messages per conversation</string>
    <string name="pref_title_manage_sim_messages">Manage SIM card messages</string>
    <string name="pref_title_manage_sim_smsc">SMS Service Center</string>
    <string name="pref_title_mms_delivery_reports">Delivery reports</string>
    <string name="pref_title_mms_read_reports">Read reports</string>
    <string name="pref_title_sms_delivery_reports">Delivery reports</string>
    <string name="pref_title_sms_save_to_simcard">"SMS Save to SIM card"</string>
    <string name="pref_title_auto_delete">Delete old messages</string>
    <string name="pref_title_sms_delete">Text message limit</string>
    <string name="pref_title_mms_delete">Multimedia message limit</string>
    <string name="pref_title_notification_enabled">Notifications</string>
    <string name="pref_summary_notification_enabled">Display message notifications in status bar</string>
    <string name="pref_title_notification_vibrateWhen">Vibrate</string>
    <string name="pref_summary_notification_vibrateWhen">Also vibrate when notified</string>
    <string name="pref_title_notification_ringtone">Select ringtone</string>
    <string name="pref_forwarding_number_title">"Forwarding setting"</string>
    <string name="pref_title_forwarding_number">"Forwarding Number"</string>
    <string name="pref_summary_forwarding_number">"Forwading information,together with the sender the forwarding"</string>
    <string name="pref_set_sms_text_size_title">"Font setting"</string>
    <string name="pref_title_set_sms_text_size">"Font size setting"</string>
    <string name="pref_summary_set_sms_text_size">"Set the font size of the read interface"</string>
    <string translatable="false" name="prefDefault_vibrateWhen">never</string>
    <string name="prefDialogTitle_vibrateWhen">Vibrate</string>
    <string name="pref_title_mms_auto_retrieval">Auto-retrieve</string>
    <string name="pref_summary_mms_auto_retrieval">Automatically retrieve messages</string>
    <string name="pref_title_mms_retrieval_during_roaming">Roaming auto-retrieve</string>
    <string name="pref_summary_mms_retrieval_during_roaming">Automatically retrieve messages while roaming</string>
	<string name="received_a_contact">Get a vcf</string>
    <string name="save_a_new_contact">Save</string>
    <string name="cancle_a_new_contact">Cancel</string>
    <string name="ConversationList_menu_item_Cancel">Cancel delete</string>
    <string name="ConversationList_menu_item_CONFIRM_delete">Confirm delete</string>
    <string name="Conversation_check_type_selected_all">Selected all</string>
    <string name="message_size">"MMS/Available/Total"</string>
    <string name="pref_title_sms_validity">SMS validity</string>
    <string name="prefDefault_sms_validity" translatable="false">Maximum</string>
   <string name="pref_title_sms_retry_times">Open Retry Mechanism</string>
</resources>