<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/recipients_subject_linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dip"
        android:paddingBottom="5dip"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:orientation="vertical">

        <EditText android:id="@+id/recipients_editor2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:capitalize="sentences"
            android:autoText="true"
            android:singleLine="true"
            android:maxLength="40"
            android:hint="@string/to_hint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/bottom_panel"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dip"
                android:paddingBottom="5dip"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:background="@drawable/bottombar_landscape_565">

                <EditText
                    android:id="@+id/embedded_text_editor2"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:autoText="true"
                    android:capitalize="sentences"
                    android:hint="@string/type_to_compose_text_enter_to_send"
                    android:maxLines="3"
                    android:inputType="textShortMessage|textAutoCorrect|textCapSentences|textMultiLine"
                    android:imeOptions="actionSend|flagNoEnterAction"
                    android:background="@android:drawable/edit_text"
                    android:maxLength="2000"
                />

                <LinearLayout
                    android:id="@+id/button_with_counter2"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" >
                    <Button
                        android:id="@+id/send_button2"
                        android:layout_marginLeft="5dip"
                        android:layout_width="wrap_content"
                        android:layout_height="0dip"
                        android:layout_weight="1.0"
                        style="?android:attr/buttonStyle"
                        android:text="@string/send"
                    />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
