<?xml version="1.0" encoding="utf-8"?>
<!-- /* * Copyright (C) 2008 Esmertec AG. * Copyright (C) 2008 The Android 
	Open Source Project * * Licensed under the Apache License, Version 2.0 (the 
	"License"); * you may not use this file except in compliance with the License. 
	* You may obtain a copy of the License at * * http://www.apache.org/licenses/LICENSE-2.0 
	* * Unless required by applicable law or agreed to in writing, software * 
	distributed under the License is distributed on an "AS IS" BASIS, * WITHOUT 
	WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. * See the 
	License for the specific language governing permissions and * limitations 
	under the License. */ -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:background="#ffffffff" android:layout_gravity="center">
	<RelativeLayout android:id="@+id/box_delete_title"
		android:layout_width="match_parent" android:layout_height="?android:attr/windowTitleSize"
		style="?android:attr/windowTitleBackgroundStyle">
		<TextView android:id="@+id/box_title" android:layout_width="match_parent"
			android:layout_height="match_parent" android:gravity="left"
			style="?android:attr/windowTitleStyle" android:background="@null"
			android:fadingEdge="horizontal" android:textColor="#ffffff" />
	</RelativeLayout>

	<RelativeLayout android:id="@+id/CheckboxRelativeLayout"
		android:layout_below="@+id/box_delete_title" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:background="#ff202020">

		<TextView android:id="@+id/CheckBoxTilte"
			android:text="@string/Conversation_check_type_selected_all"
			android:layout_marginRight="10dip" android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:layout_centerVertical="true"
			android:layout_toLeftOf="@+id/checkbox_selected_all" />
		<CheckBox android:id="@+id/checkbox_selected_all"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_centerVertical="true" android:focusable="false"
			android:paddingRight="3dip" android:layout_alignParentRight="true" />
	</RelativeLayout>

	<ListView android:layout_below="@+id/CheckboxRelativeLayout"
		android:id="@+id/box_messages_delete" android:layout_width="match_parent"
		android:layout_height="match_parent" android:scrollbarStyle="insideOverlay"
		android:cacheColorHint="#ffffffff" android:listSelector="@android:drawable/list_selector_background"
		android:divider="@android:drawable/divider_horizontal_bright"
		android:focusable="true" android:drawSelectorOnTop="false"
		android:stackFromBottom="false" android:layout_above="@+id/ButtonLinearLayout" />

	<LinearLayout android:id="@+id/ButtonLinearLayout"
		android:orientation="horizontal" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:background="#ff202020"
		android:layout_alignParentBottom="true">

		<Button android:id="@+id/DeleteButton" android:layout_width="fill_parent"
			android:layout_weight="1" android:layout_height="wrap_content"
			android:text="@string/ConversationList_menu_item_CONFIRM_delete" />

		<Button android:id="@+id/CancelButton" android:layout_width="fill_parent"
			android:layout_weight="1" android:layout_height="wrap_content"
			android:text="@string/ConversationList_menu_item_Cancel" />
	</LinearLayout>
</RelativeLayout>
